--- a/css/styles.css
+++ b/css/styles.css
@@ -211,6 +211,14 @@ footer {
   background-color: #e0bd00;
 }
 
+/* Map  style */
+#map {
+  height: 90vh;
+  width: 100%;
+  margin: 1rem auto;
+}
+
+
 @media (max-width: 480px) {
   .search-bar {
     flex-direction: column;
