--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,19 @@ body {
   display: none;
 }
 
+input[type="email"], input[type="password"] {
+  width: 100%;
+  padding: 0.6rem;
+  margin-top: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.modal-box form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
 
 /* Event */
 .event-grid {
